# sonic-sairedis

./: .gitignore  Makefile.am  autoclean.sh  check.sh  configure.ac
SAI/meta/: Makefile
closefd/: Makefile  closefd.c
dash/: bar.rec  dash.syncd.sh
dashapp/: Makefile.am  dashapp.cpp  read.me  test.rec
lib/: Makefile.am  Recorder.h  sai_redis.h  sai_redis_dash_tag.cpp  sai_redis_interfacequery.cpp
lib/inc/: BoostSHMChannel.h  RedisRemoteSaiInterface.h  sai_redis.h  sairedis.h
lib/src/: BoostSHMChannel.cpp  Makefile.am  RedisRemoteSaiInterface.cpp  VirtualObjectIdManager.cpp  sai_redis_fdb.cpp  sai_redis_generic_get.cpp  sai_redis_generic_get_stats.cpp  sai_redis_generic_stats.cpp  sai_redis_interfacequery.cpp  sai_redis_notifications.cpp  sai_redis_route.cpp  sai_redis_switch.cpp  tests.cpp
meta/: Makefile.am  Meta.cpp  Meta.h  MetaKeyHasher.cpp  SaiInterface.h  SaiSerialize.cpp  sai_meta.cpp  sai_meta.h  sai_serialize.h  saiserialize.cpp  saiserialize.h  tests.cpp
multisyncd/multisyncd/: database_config.json  lanemap.ini  main.cpp  script.sh  vsprofile.ini
proxylib/: Proxy.cpp  Proxy.h
pyext/: pysairedis.i  saiswig.i
python/: sairedis.cpp  setup.py  test.py
saiasiccmp/: AsicCmp.cpp  CommandLineOptions.cpp  Makefile.am  SaiSwitchAsic.cpp  View.cpp  main.cpp
saidiscovery/: Makefile.am
saidump/: saidump.cpp
saiplayer/: saiplayer.cpp
saisdkdump/: Makefile.am  saisdkdump.cpp
swss/: logger.h
swsstest/: Makefile  brcm.profile.ini  fakesyncd.cpp  foo_brcm.sh  foo_mlnx.sh  interfaces.cfg  net-old.sh  net.sh  net2.sh  sairedis.rec  sample.route.json  swss.rec  test-swss.sh  test.sh  test2.sh
swsstest/Force10-S6000/: alias_map.json  port_config.ini
syncd/: BoostSHMSelectableChannel.cpp  BoostSHMSelectableChannel.h  Makefile.am  NotificationQueue.cpp  RedisClient.cpp  SaiSwitch.cpp  SaiSwitch.h  SaiSwitchInterface.cpp  SaiSwitchInterface.h  Syncd.cpp  VendorSai.cpp  VirtualOidTranslator.cpp  VirtualOidTranslator.h  syncd.cpp  syncd.h  syncd_applyview.cpp  syncd_hard_reinit.cpp  syncd_main.cpp  syncd_notifications.cpp  syncd_saiswitch.cpp  syncd_saiswitch.h  tests.cpp  update_asic_view.lua  update_rid_vid_maps.lua
testntf/: Makefile  test.cpp
tests/: Makefile.am  aspell.en.pws  brcm.pl  test.sh
tests/fdb/: a_first.rec  a_second.rec
vslib/: Makefile.am  sai_vs.h  sai_vs_dash_tag.cpp  sai_vs_interfacequery.cpp
vslib/inc/: sai_vs.h  sai_vs_state.h
vslib/src/: Makefile.am  NetMsgRegistrar.cpp  sai_vs_fdb.cpp  sai_vs_generic_create.cpp  sai_vs_generic_remove.cpp  sai_vs_hostintf.cpp  sai_vs_interfacequery.cpp  sai_vs_port.cpp  sai_vs_switch.cpp  sai_vs_switch_BCM56850.cpp  sai_vs_switch_MLNX2700.cpp  tests.cpp
